// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Component should render as expected 1`] = `
<div
  className="container"
>
  <h2
    className="title"
  >
    My Post
  </h2>
  <p
    className="content"
  />
</div>
`;

exports[`Post Component should render as expected 2`] = `
<div
  className="container"
>
  <h2
    className="title"
  >
    <Link
      className="link"
      replace={false}
      to="/posts/undefined"
    >
      My Post
    </Link>
  </h2>
  <p
    className="content"
  />
</div>
`;
